--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,25 @@
 version: 2.1
 orbs:
-  gcp-gcr: circleci/gcp-gcr@0.6.1
+  gcp-gcr: circleci/gcp-gcr@0.15.0
   cloudrun: circleci/gcp-cloud-run@1.0.2
 jobs:
   build_test:
     docker:
-      - image: circleci/python:3.7.4
+      - image: cimg/python:3.12
     steps:
       - checkout
       - run:
           name: Install Python Dependencies
           command: |
-            echo 'export PATH=~$PATH:~/.local/bin' >> $BASH_ENV && source $BASH_ENV
+            pip install --user --upgrade pip
             pip install --user -r requirements.txt
       - run:
           name: Run Tests
           command: |
             pytest
-  build_push_image_cloud_run_mangaged:
+  build_push_image_cloud_run_managed:
     docker:
-      - image: circleci/python:3.7.4
+      - image: cimg/python:3.12
     steps:
       - checkout
       - setup_remote_docker:
@@ -27,11 +27,11 @@ jobs:
       - run:
           name: Build app binary and Docker image
           command: |
-            echo 'export PATH=~$PATH:~/.local/bin' >> $BASH_ENV
-            echo ${GOOGLE_CLOUD_KEY} | base64 --decode --ignore-garbage > $HOME/gcloud-service-key.json
-            echo 'export GOOGLE_CLOUD_KEYS=$(cat $HOME/gcloud-service-key.json)' >> $BASH_ENV
-            echo 'export TAG=${CIRCLE_SHA1}' >> $BASH_ENV
-            echo 'export IMAGE_NAME=$CIRCLE_PROJECT_REPONAME' >> $BASH_ENV && source $BASH_ENV
+            echo ${GCP_PROJECT_KEY} | base64 --decode --ignore-garbage > $HOME/gcloud-service-key.json
+            export GOOGLE_CLOUD_KEYS=$(cat $HOME/gcloud-service-key.json)
+            export TAG=${CIRCLE_SHA1}
+            export IMAGE_NAME=$CIRCLE_PROJECT_REPONAME
+            pip install --user --upgrade pip
             pip install --user -r requirements.txt
             pyinstaller -F hello_world.py
             docker build -t us.gcr.io/$GOOGLE_PROJECT_ID/$IMAGE_NAME -t us.gcr.io/$GOOGLE_PROJECT_ID/$IMAGE_NAME:$TAG .
@@ -53,6 +53,6 @@ workflows:
   build_test_deploy:
     jobs:
       - build_test
-      - build_push_image_cloud_run_mangaged:
+      - build_push_image_cloud_run_managed:
           requires:
             - build_test
