--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  gcp-gcr: circleci/gcp-gcr@0.15.0
+  gcp-gcr: circleci/gcp-gcr@0.16.1
   cloudrun: circleci/gcp-cloud-run@1.0.2
 jobs:
   build_test:
@@ -24,6 +24,16 @@ jobs:
       - checkout
       - setup_remote_docker:
           docker_layer_caching: false
+      - run:
+          name: Install/Update Google Cloud SDK
+          command: |
+            # Remove any existing gcloud installation to avoid conflicts
+            sudo rm -rf /home/circleci/google-cloud-sdk || true
+            # Install fresh Google Cloud SDK
+            curl https://sdk.cloud.google.com | bash > /dev/null
+            echo 'export PATH="$HOME/google-cloud-sdk/bin:$PATH"' >> $BASH_ENV
+            source $HOME/google-cloud-sdk/path.bash.inc
+            gcloud components update --quiet
       - run:
           name: Build app binary and Docker image
           command: |
