--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
             echo 'export PATH="$HOME/google-cloud-sdk/bin:$PATH"' >> $BASH_ENV
             source $BASH_ENV
       - run:
-          name: Setup Google Cloud credentials
+          name: Setup Google Cloud credentials and environment
           command: |
             # Decode the service account key with better error handling
             echo "Decoding service account key..."
@@ -58,24 +58,45 @@ jobs:
               echo "GCP_PROJECT_KEY length: ${#GCP_PROJECT_KEY}"
               exit 1
             fi
-            # Set environment variable for orbs
+            # Set environment variables for orbs and subsequent steps
             echo 'export GOOGLE_CLOUD_KEYS=$(cat $HOME/gcloud-service-key.json)' >> $BASH_ENV
+            echo "export TAG=${CIRCLE_SHA1}" >> $BASH_ENV
+            echo "export IMAGE_NAME=${CIRCLE_PROJECT_REPONAME}" >> $BASH_ENV
+            # Debug: Show environment variables
+            echo "Environment variables set:"
+            echo "TAG: ${CIRCLE_SHA1}"
+            echo "IMAGE_NAME: ${CIRCLE_PROJECT_REPONAME}"
+            echo "PROJECT_ID: ${GOOGLE_PROJECT_ID}"
       - run:
           name: Build app binary and Docker image
           command: |
-            export TAG=${CIRCLE_SHA1}
-            export IMAGE_NAME=$CIRCLE_PROJECT_REPONAME
+            # Load environment variables
+            source $BASH_ENV
+            echo "Building with:"
+            echo "TAG: $TAG"
+            echo "IMAGE_NAME: $IMAGE_NAME"
+            echo "PROJECT_ID: $GOOGLE_PROJECT_ID"
+
             pip install --user --upgrade pip
             pip install --user -r requirements.txt
             pyinstaller -F hello_world.py
-            docker build -t us.gcr.io/$GOOGLE_PROJECT_ID/$IMAGE_NAME -t us.gcr.io/$GOOGLE_PROJECT_ID/$IMAGE_NAME:$TAG .
+
+            # Build Docker image with proper tags
+            docker build -t us.gcr.io/$GOOGLE_PROJECT_ID/$IMAGE_NAME:latest -t us.gcr.io/$GOOGLE_PROJECT_ID/$IMAGE_NAME:$TAG .
+
+            # Verify images were built
+            docker images | grep us.gcr.io/$GOOGLE_PROJECT_ID/$IMAGE_NAME
       - run:
           name: Authenticate with Google Cloud
           command: |
+            # Load environment variables
+            source $BASH_ENV
             # Use the validated service account key
             gcloud auth activate-service-account --key-file=$HOME/gcloud-service-key.json
             gcloud config set project $GOOGLE_PROJECT_ID
             gcloud auth configure-docker --quiet
+            # Verify authentication
+            gcloud config list
       - gcp-gcr/gcr-auth:
           gcloud-service-key: GOOGLE_CLOUD_KEYS
           google-project-id: GOOGLE_PROJECT_ID
